RESOLVED FIXED205714
Fix non-libwebrtc builds after r253957
https://bugs.webkit.org/show_bug.cgi?id=205714
Summary Fix non-libwebrtc builds after r253957
youenn fablet
Reported 2020-01-03 00:24:57 PST
Fix non-libwebrtc builds after r253957
Attachments
Patch (1.46 KB, patch)
2020-01-03 00:26 PST, youenn fablet
no flags
youenn fablet
Comment 1 2020-01-03 00:26:33 PST
WebKit Commit Bot
Comment 2 2020-01-03 01:57:38 PST
Comment on attachment 386664 [details] Patch Clearing flags on attachment: 386664 Committed r253993: <https://trac.webkit.org/changeset/253993>
WebKit Commit Bot
Comment 3 2020-01-03 01:57:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2020-01-03 01:58:21 PST
Note You need to log in before you can comment on or make changes to this bug.