Fix non-libwebrtc builds after r253957 https://bugs.webkit.org/show_bug.cgi?id=205714

Unreviewed.


* GPUProcess/webrtc/LibWebRTCCodecsProxy.mm:
Move the includes inside the compilation guard.


Canonical link: https://commits.webkit.org/218869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253993 268f45cc-cd09-0410-ab3c-d52691b4dbfc